org.ekstep.keyboard-1.1/renderer/style/style.css
::-webkit-scrollbar-track
{
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
	background-color: #F5F5F5;
}

::-webkit-scrollbar
{
	width: 10px;
	background-color: #F5F5F5;
}

::-webkit-scrollbar-thumb
{
	background-color: #000000;
	border: 2px solid #555555;
}

#keyboardDiv {
  position: absolute;
  top: 45%;
  left: 0;
  right: 0;
  bottom: 0;
}

.ansField {
  width: 75%;
  margin-left: 12%;
  text-align: center;
  margin-top: 17%;
  background: #ebebeb;
}

#keyboardInput {
  background-color: #ebebeb;
  height: 36px;
  margin-top: 0;
  width: 100%;
  margin-left: 0px;
}

.textBoxArea {
  position: absolute;
  z-index: 20;
  width: 50%;
  background: #447dc1;
  margin: 0 auto;
  margin-top: -45px;
  left: 0px;
  right: 0px;
  top: 28%;
}

.parentDivMainKeyboard,
#parentDivNumericKeyboard {
  width: 100%;
  bottom: 0%;
  position: fixed;
  left: 0%;
  font-size: 2.5vw;
  z-index: 10;
  background-color: #65a0e6;
  top: 58%;
}

#parentDivNumericKeyboard {
  display: none;
}

.key_barakhadi:active,
.key_barakhadi_numeric:active {
  background-color: rgb(215, 215, 215);
  height: 70%;
}

.special_keys {
  float: left;
  margin: 2px;
  vertical-align: middle;
  text-align: center;
  min-width: 5.5%;    background: rgb(255, 255, 255);
  border-radius: 6px;
  padding: 5px 6px;
}

.key_barakhadi,
.key_barakhadi_numeric {
  float: left;
  vertical-align: middle;
  text-align: center;
  flex-grow: inherit;
  min-width: 6%; 
  background: #ffffff;
  border-radius: 6px;
  margin-bottom: 2%;
  margin-right: 1%;
  width: auto;
  padding: 1% 1%;
  cursor: pointer;
}
.key_barakhadi:hover,
.key_barakhadi_numeric:hover {
  background: #d1e6ff;
}
.key_barakhadi_last_key {
  position: relative;
  clear: left;
  border: none;
  margin: 2px;
  padding-top: 1%;
  text-align: center;
  height: 38px;
}

.spaceBar {
  float: left;
  border: none;
  margin: 2px;
  width: 50%;
  background: #084690;
  border-radius: 3px;
  height: 30px;
  display: inline-block;
  cursor: pointer;
}

#firstRowAlpha {
  width: 100%;
  top: 4%;
  position: relative;
  display: flex;
  flex-wrap: wrap;    
  align-items: center;
  justify-content: center;
}

#thirdRowAlpha {
  height: 17%;
  width: 80%;
  left: 0px;
  right: 0px;
  top: 85%;
  position: fixed;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 0 auto;
  align-items: center;
  bottom: 0px;
  background: rgb(101, 160, 230);

}

#firstRowNum {
  top: 5%;
  width: 100%;
  height: auto;
  position: relative;
  display: flex;
  flex-wrap: wrap;    
  align-items: center;
  justify-content: center;
  margin-bottom: 34px;    
  max-height: 65px;
  height: 65px;
}

#parentDivEraser {
  width: 80%;
  height: 100%;
  top: 55%;
  position: absolute;
  left: 10%;
}

.erasedDivParent{
  display: flex;
  justify-content: center;
  align-items: center;
}
.hideKeyboard {
  display: flex;
  align-items: center;
}

#erasedDiv {
  width: 100%;
  height: 100%;
  position: relative;
  z-index: 10;
}

#eraserImg {
  width: 100%;
  height: 100%;
}

#languageIconDiv {
  float: left;
  padding: 0.35em 0.1em 0.15em 0;
  height: 75%;
  width: 6%;
}

#languageIconImage {
  width: 100%;
  height: 100%;
}

.special_keys {
  display: inline-block;
  cursor: pointer;
}

.special_keys>span {
  vertical-align: middle;
}

img.qc-erase-icon {
  width: 45%;
}

img.qc-language-icon {
  width: 37%;
  margin-top: 7%;
}

#firstRowNum .key_barakhadi_numeric {
  width: 6%;
}

.third-row-numeric {
  width: 80%;
  top: 88%;
  left: 0px;
  right: 0px;
  position: fixed;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 0 auto;
  align-items: center;
  bottom: 0px;
  border-top-left-radius:5px;
  border-top-right-radius:5px;
  background: rgba(101, 160, 230, 1);
}

